unpackaged/main/default/objects/Top_Spec__c/fields/Shell_cut_off__c.field-meta.xml
<CustomField>
    <fullName>Shell_cut_off__c</fullName>
    <inlineHelpText>Please enter the date and time for shell cut off</inlineHelpText>
    <label>Shell cut off</label>
    <type>DateTime</type>
</CustomField>