unpackaged/main/default/objects/Top_Spec__c/fields/Shell_Scheme_Extras_Details__c.field-meta.xml
<CustomField>
    <fullName>Shell_Scheme_Extras_Details__c</fullName>
    <inlineHelpText>Please enter any Shell Scheme extra details here. You can also attach visuals editing the field and then clicking on the image icon.</inlineHelpText>
    <label>Shell Scheme Extras Additional Info</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>