unpackaged/main/default/objects/Top_Spec__c/fields/Shell_Scheme_Fascia_Grid__c.field-meta.xml
<CustomField>
    <fullName>Shell_Scheme_Fascia_Grid__c</fullName>
    <label>Shell Scheme Fascia/Grid</label>
    <type>TextArea</type>
</CustomField>