unpackaged/main/default/objects/Top_Spec__c/fields/ShellSchemeExtra_Contractor_Status__c.field-meta.xml
<CustomField>
    <fullName>ShellSchemeExtra_Contractor_Status__c</fullName>
    <inlineHelpText>What is the contractor status?</inlineHelpText>
    <label>Contractor Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole</fullName>
                <default>true</default>
                <label>Sole</label>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>