unpackaged/main/default/objects/Top_Spec__c/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <inlineHelpText>The Show Name</inlineHelpText>
    <label>Show Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>