unpackaged/main/default/objects/Top_Spec__c/fields/Show_Open__c.field-meta.xml
<CustomField>
    <fullName>Show_Open__c</fullName>
    <inlineHelpText>Date the show opens (occurrence)</inlineHelpText>
    <label>Show Open</label>
    <type>Date</type>
</CustomField>