unpackaged/main/default/objects/Top_Spec__c/fields/Show_Ready_Start__c.field-meta.xml
<CustomField>
    <fullName>Show_Ready_Start__c</fullName>
    <description>Enter the date/time of start up for Show Ready</description>
    <inlineHelpText>Enter the date/time of start up for Show Ready</inlineHelpText>
    <label>Show Ready Start</label>
    <type>DateTime</type>
</CustomField>