unpackaged/main/default/objects/Top_Spec__c/fields/Site_Furniture__c.field-meta.xml
<CustomField>
    <fullName>Site_Furniture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the furniture manager / team leader</inlineHelpText>
    <label>Furniture</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoTop_SpecsFurnitureSite</relationshipName>
    <type>Lookup</type>
</CustomField>