unpackaged/main/default/objects/Top_Spec__c/fields/Site_Health_and_Safety_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Site_Health_and_Safety_Responsibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the H &amp;S manager / team leader</inlineHelpText>
    <label>Health and Safety Responsibility</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UsertoTop_SpecsHealthSite</relationshipName>
    <type>Lookup</type>
</CustomField>