unpackaged/main/default/objects/Top_Spec__c/fields/Space_Only_Stands_Design_Build_Detai__c.field-meta.xml
<CustomField>
    <fullName>Space_Only_Stands_Design_Build_Detai__c</fullName>
    <inlineHelpText>Please enter any relevant details here. You can also attach visuals by editing the field and then clicking on the image icon.</inlineHelpText>
    <label>Space Only Stands/Design&amp;Build Add Info</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>