unpackaged/main/default/objects/Top_Spec__c/fields/Sprinkler_Installation_Details__c.field-meta.xml
<CustomField>
    <fullName>Sprinkler_Installation_Details__c</fullName>
    <inlineHelpText>Please enter any sprinkler installation details here. You can also attach visuals by editing the field and then clicking on the image icon.</inlineHelpText>
    <label>Sprinkler Installation Additional Info</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>