unpackaged/main/default/objects/Top_Spec__c/fields/Stand_Approval_Testing_Details__c.field-meta.xml
<CustomField>
    <fullName>Stand_Approval_Testing_Details__c</fullName>
    <inlineHelpText>Please enter any relevant Stand Approval details here. You can also attach visuals by editing the field and then clicking on the image icon.</inlineHelpText>
    <label>Stand Approval Testing Additional Info</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>