unpackaged/main/default/objects/Top_Spec__c/fields/Stand_Cleaning_Cut_off_date__c.field-meta.xml
<CustomField>
    <fullName>Stand_Cleaning_Cut_off_date__c</fullName>
    <inlineHelpText>Please enter the cut off date</inlineHelpText>
    <label>Stand Cleaning Cut off</label>
    <type>DateTime</type>
</CustomField>