unpackaged/main/default/objects/Top_Spec__c/fields/Stand_Cleaning_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Stand_Cleaning_surcharge__c</fullName>
    <inlineHelpText>Please enter the surcharge date</inlineHelpText>
    <label>Stand Cleaning surcharge</label>
    <type>Date</type>
</CustomField>