unpackaged/main/default/objects/Top_Spec__c/fields/Standby_AV_Standby_Finish__c.field-meta.xml
<CustomField>
    <fullName>Standby_AV_Standby_Finish__c</fullName>
    <inlineHelpText>Please enter the date and time that stand by finishes for AV</inlineHelpText>
    <label>AV standby finish</label>
    <type>DateTime</type>
</CustomField>