unpackaged/main/default/objects/Top_Spec__c/fields/Standby_AV_Start__c.field-meta.xml
<CustomField>
    <fullName>Standby_AV_Start__c</fullName>
    <inlineHelpText>Please enter the date and time that stand by starts for AV</inlineHelpText>
    <label>AV standby start</label>
    <type>DateTime</type>
</CustomField>