unpackaged/main/default/objects/Top_Spec__c/fields/Standby_Carpet_standby_finish__c.field-meta.xml
<CustomField>
    <fullName>Standby_Carpet_standby_finish__c</fullName>
    <inlineHelpText>Please enter the date and time that stand by finishes for Carpet</inlineHelpText>
    <label>Carpet standby finish</label>
    <type>DateTime</type>
</CustomField>