unpackaged/main/default/objects/Top_Spec__c/fields/Standby_Carpet_standby_start__c.field-meta.xml
<CustomField>
    <fullName>Standby_Carpet_standby_start__c</fullName>
    <inlineHelpText>Please enter the date and time that stand by starts for Carpet</inlineHelpText>
    <label>Carpet standby start</label>
    <type>DateTime</type>
</CustomField>