unpackaged/main/default/objects/Top_Spec__c/fields/Standby_Features_standby_start__c.field-meta.xml
<CustomField>
    <fullName>Standby_Features_standby_start__c</fullName>
    <inlineHelpText>Please enter the date and time that stand by starts for Features</inlineHelpText>
    <label>Features standby start</label>
    <type>DateTime</type>
</CustomField>