unpackaged/main/default/objects/Top_Spec__c/fields/standby_Standfitting_finish__c.field-meta.xml
<CustomField>
    <fullName>standby_Standfitting_finish__c</fullName>
    <inlineHelpText>Please enter the date and time that stand by finishes for stand fitting</inlineHelpText>
    <label>Standfitting standby finish</label>
    <type>DateTime</type>
</CustomField>