unpackaged/main/default/objects/Top_Spec__c/fields/Telephone_Telefax_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Telefax_Surcharge__c</fullName>
    <inlineHelpText>Please enter the surcharge date</inlineHelpText>
    <label>Telephone&amp;Telefax Surcharge</label>
    <type>Date</type>
</CustomField>