unpackaged/main/default/objects/Top_Spec__c/fields/Ticketing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_End_Date__c</fullName>
    <label>Ticketing End Date</label>
    <type>DateTime</type>
</CustomField>