unpackaged/main/default/objects/Top_Spec__c/fields/Total_Shell_Scheme_SQM__c.field-meta.xml
<CustomField>
    <fullName>Total_Shell_Scheme_SQM__c</fullName>
    <label>Total Shell Scheme SQM</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>