unpackaged/main/default/objects/Top_Spec__c/fields/Typeface_Colour__c.field-meta.xml
<CustomField>
    <fullName>Typeface_Colour__c</fullName>
    <inlineHelpText>Please enter the typeface colour</inlineHelpText>
    <label>Typeface Colour</label>
    <length>100</length>
    <type>Text</type>
</CustomField>