unpackaged/main/default/objects/Top_Spec__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <description>Holds the venue</description>
    <inlineHelpText>The venue where the Exhibition Opportunity will be held at</inlineHelpText>
    <label>Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>