unpackaged/main/default/objects/Top_Spec__c/fields/Waste_Joint_Contractor_Details__c.field-meta.xml
<CustomField>
    <fullName>Waste_Joint_Contractor_Details__c</fullName>
    <inlineHelpText>What are the contractor details?</inlineHelpText>
    <label>Joint Contractor Details</label>
    <type>TextArea</type>
</CustomField>