unpackaged/main/default/objects/Top_Spec__c/fields/Waste_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Waste_Surcharge__c</fullName>
    <inlineHelpText>Please enter the surcharge date</inlineHelpText>
    <label>Waste Surcharge</label>
    <type>Date</type>
</CustomField>