unpackaged/main/default/objects/Top_Spec__c/fields/Water_Details__c.field-meta.xml
<CustomField>
    <fullName>Water_Details__c</fullName>
    <inlineHelpText>Please enter any relevant water details. You can also attach visuals by editing the field and then clicking on the image icon.</inlineHelpText>
    <label>Water Additional Information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>