unpackaged/main/default/objects/Top_Spec__c/recordTypes/Congress_Top_Spec.recordType-meta.xml
<RecordType>
    <fullName>Congress_Top_Spec</fullName>
    <active>true</active>
    <description>Top Spec for Congress</description>
    <label>Congress Top Spec</label>
</RecordType>