unpackaged/main/default/objects/Top_Spec__c/recordTypes/EU_Top_Spec.recordType-meta.xml
<RecordType>
    <fullName>EU_Top_Spec</fullName>
    <active>true</active>
    <description>Top Spec for EU Shows Only</description>
    <label>EU Top Spec</label>
</RecordType>