unpackaged/main/default/objects/Top_Spec__c/recordTypes/ME_Top_Spec.recordType-meta.xml
<RecordType>
    <fullName>ME_Top_Spec</fullName>
    <active>true</active>
    <description>Top Spec for ME Shows only</description>
    <label>ME Top Spec</label>
</RecordType>