unpackaged/main/default/objects/Top_Spec__c/recordTypes/UK_Top_Spec.recordType-meta.xml
<RecordType>
    <fullName>UK_Top_Spec</fullName>
    <active>true</active>
    <description>Top Spec for UK Based Shows</description>
    <label>UK Top Spec</label>
</RecordType>