unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_AV_is_marketed.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_AV_is_marketed</fullName>
    <active>false</active>
    <errorConditionFormula>Contracted_AV__c == True &amp;&amp; (
Marketing_AV__c == False
&amp;&amp;  LEN(Marketing_If_no_to_AV_why__c) = 0)</errorConditionFormula>
    <errorMessage>If AV is contracted and is not being marketed you must enter a reason why</errorMessage>
</ValidationRule>