unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Electrics_is_marketed.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Electrics_is_marketed</fullName>
    <active>false</active>
    <errorConditionFormula>Contracted_Electrics__c == True &amp;&amp; (
Marketing_Electrics__c == False
&amp;&amp;  LEN(Marketing_If_no_to_Electrics_why__c) = 0)</errorConditionFormula>
    <errorMessage>If electrics is not being marketed you must enter a reason why</errorMessage>
</ValidationRule>