unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Electrics_Joint.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Electrics_Joint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  Electrics_Contractor_Status__c  ,&quot;Joint&quot;) &amp;&amp; Len(  Electrics_Joint_Contractor_Details__c   ) =0</errorConditionFormula>
    <errorMessage>If we are joint contractor for Electrics you must enter the joint contractor details</errorMessage>
</ValidationRule>