unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Features_Joint.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Features_Joint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Features_Contractor_Status__c  ,&quot;Joint&quot;) &amp;&amp; Len(  Features_Joint_Contractor_Details__c   ) =0</errorConditionFormula>
    <errorMessage>If we are joint contractor for Features you must enter the joint contractor details</errorMessage>
</ValidationRule>