unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Floral_Joint.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Floral_Joint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Floral_Contractor_Status__c  ,&quot;Joint&quot;) &amp;&amp; Len(  Floral_Joint_Contractor_Details__c   ) =0</errorConditionFormula>
    <errorMessage>If we are joint contractor for Floral you must enter the joint contractor details</errorMessage>
</ValidationRule>