unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Furniture_is_marketed.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Furniture_is_marketed</fullName>
    <active>false</active>
    <errorConditionFormula>Contracted_Furniture__c == True &amp;&amp; (
Marketing_Furniture__c == False
&amp;&amp;  LEN( Marketing_If_no_to_furniture__c ) = 0)</errorConditionFormula>
    <errorMessage>If furniture is contracted and is not being marketed you must enter a reason why</errorMessage>
</ValidationRule>