unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Furniture_Joint.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Furniture_Joint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Furniture_Contractor_Status__c,&quot;Joint&quot;) &amp;&amp; Len(  Furniture_Contractor_Name__c ) =0</errorConditionFormula>
    <errorMessage>If we are joint contractor for Furniture you must enter the joint contractor details</errorMessage>
</ValidationRule>