unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Graphics_is_marketed.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Graphics_is_marketed</fullName>
    <active>false</active>
    <errorConditionFormula>Contracted_Graphics__c  == True &amp;&amp; (
 Marketing_Graphics__c  == False
&amp;&amp;  LEN( Marketing_If_no_to_Graphics_why__c  ) = 0)</errorConditionFormula>
    <errorMessage>If Graphics is contracted and is not being marketed you must enter a reason why</errorMessage>
</ValidationRule>