unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Hostess_Joint.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Hostess_Joint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Hostess_Contractor_Status__c  ,&quot;Joint&quot;) &amp;&amp; Len(     Hostess_Joint_Contractor_Details__c  ) =0</errorConditionFormula>
    <errorMessage>If we are joint contractor for Hostess you must enter the joint contractor details</errorMessage>
</ValidationRule>