unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Lead_Capture_is_marketed.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Lead_Capture_is_marketed</fullName>
    <active>false</active>
    <errorConditionFormula>Contracted_Lead_Capture__c == True &amp;&amp; (
Marketing_Lead_Capture__c == False
&amp;&amp;  LEN(  Marketing_If_no_to_Lead_Capture_why__c  ) = 0)</errorConditionFormula>
    <errorMessage>If Lead Capture is contracted and is not being marketed you must enter a reason why</errorMessage>
</ValidationRule>