unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Lead_Capture_Joint.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Lead_Capture_Joint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( LeadCapture_Contractor_Status__c  ,&quot;Joint&quot;) &amp;&amp; Len(  LeadCaptureJoint_Contractor_Details__c 
) =0</errorConditionFormula>
    <errorMessage>If we are joint contractor for Lead Capture you must enter the joint contractor details</errorMessage>
</ValidationRule>