unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Logistics_is_marketed.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Logistics_is_marketed</fullName>
    <active>false</active>
    <errorConditionFormula>Contracted_Logistics__c == True &amp;&amp; (
Marketing_Logistics__c == False
&amp;&amp;  LEN( Marketing_If_no_to_Logistics_Why__c ) = 0)</errorConditionFormula>
    <errorMessage>If Logistics is contracted and is not being marketed you must enter a reason why</errorMessage>
</ValidationRule>