unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Logistics_Joint.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Logistics_Joint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Logistics_Contractor_Status__c  ,&quot;Joint&quot;) &amp;&amp; Len(   Logistics_Joint_Contractor_Details__c  
) =0</errorConditionFormula>
    <errorMessage>If we are joint contractor for Logistics you must enter the joint contractor details</errorMessage>
</ValidationRule>