unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Nameboard_Joint.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Nameboard_Joint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Nameboard_Contractor_Status__c  ,&quot;Joint&quot;) &amp;&amp; Len(   Nameboard_Joint_Contractor_Details__c  
) =0</errorConditionFormula>
    <errorMessage>If we are joint contractor for Nameboards you must enter the joint contractor details</errorMessage>
</ValidationRule>