unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Nameboards_is_marketed.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Nameboards_is_marketed</fullName>
    <active>false</active>
    <errorConditionFormula>Contracted_Nameboards__c == True &amp;&amp; (
Marketing_Nameboards__c == False
&amp;&amp;  LEN(  Marketing_If_no_to_name_boards_why__c  ) = 0)</errorConditionFormula>
    <errorMessage>If name boards are contracted and are not being marketed you must enter a reason why</errorMessage>
</ValidationRule>