unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Parking_Joint.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Parking_Joint</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Parking_Contractor_Status__c  ,&quot;Joint&quot;) &amp;&amp; Len(   Parking_Joint_Contractor_Details__c  
) =0</errorConditionFormula>
    <errorMessage>If we are joint contractor for Parking you must enter the joint contractor details</errorMessage>
</ValidationRule>