unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Payment_Term_Other_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Payment_Term_Other_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Payment_Terms__c, &quot;Other&quot;) &amp;&amp;  Payment_Terms_Other__c = &quot;&quot;</errorConditionFormula>
    <errorMessage>If you select Other in Payment Terms, you must enter the terms in Payment Terms (Other)</errorMessage>
</ValidationRule>