unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Servicing_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Servicing_Other</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Servicing__c , &quot;Other&quot;) &amp;&amp;   Servicing_Other__c  = &quot;&quot;</errorConditionFormula>
    <errorMessage>If you select Other in Servicing, you must enter a description in Servicing (Other)</errorMessage>
</ValidationRule>