unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_Servicing_Other_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_Servicing_Other_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL( Servicing__c , &quot;Other&quot;) &amp;&amp;  Len(Servicing_Other__c) &gt;0</errorConditionFormula>
    <errorMessage>If you have not selected Other as Servicing, you do not need to enter anything in Servicing (Other)</errorMessage>
</ValidationRule>