unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_ShellScheme_extra_is_marketed.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_ShellScheme_extra_is_marketed</fullName>
    <active>false</active>
    <errorConditionFormula>Contracted_Shell_Scheme_Extras__c == True &amp;&amp; (
Marketing_Shell_Scheme_Extras__c == False
&amp;&amp;  LEN(   Marketing_no_to_Shell_Scheme_Extra_why__c  ) = 0)</errorConditionFormula>
    <errorMessage>If shell scheme extras are contracted and is not being marketed you must enter a reason why</errorMessage>
</ValidationRule>