unpackaged/main/default/objects/Top_Spec__c/validationRules/EMEA_Check_ShellScheme_is_marketed.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Check_ShellScheme_is_marketed</fullName>
    <active>false</active>
    <errorConditionFormula>Contracted_Shell_Scheme__c == True &amp;&amp; (
Marketing_Shell_Scheme__c == False
&amp;&amp;  LEN(  Marketing_If_no_to_shell_scheme_why__c  ) = 0)</errorConditionFormula>
    <errorMessage>If shell scheme is contracted and is not being marketed you must enter a reason why</errorMessage>
</ValidationRule>